--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ function checkCookie() {
 }
 </script>
 </head>
-
+<p>&copy; 2023, Vidhi Patel | Terms of Service |  Privacy Policy</p>
 <body onload="checkCookie()"></body>
 
 </html>
